# IDE

./: AGENTS.md  ENHANCED_PARSER_SUMMARY.md  Makefile  README.md  hello.py  pyproject.toml
src/backend/: .env.example  ARCHITECTURE-IMPORTS.md  ARCHITECTURE.md  README-domain-api.md  README-graph-builder.md  README.md  demo_phase2.py  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt
src/backend/app/: main.py
src/backend/app/api/: projects.py  users.py
src/backend/app/config/: settings.py
src/backend/app/core/: base.py  code_elements.py  file.py  folder.py  manager.py  package.py  project.py  project_scanner.py  tree_builder.py
src/backend/app/core/parser/: __init__.py  file_navigator.py  project_scanner.py
src/backend/app/db/: client.py  dependencies.py  edge_orm.py  node_orm.py  orm.py  service.py
src/backend/app/db/collections/: __init__.py  nodes.py  post.py  user.py  (+1 more)
src/backend/app/domain/: code_elements.py  container.py  file.py  folder.py  manager.py  project.py
src/backend/app/graph/: builder.py  factories.py  scanner.py  validator.py
src/backend/app/models/: README.md  base.py  connection.py  edges.py  node.py  project.py  properties.py  shared.py  user.py
src/backend/app/services/: project_scanner.py  scanner.py  validator.py
src/backend/db/: README.md
src/backend/docker-entrypoint-initdb.d/: init-db.sh
src/backend/services/: README.md
src/backend/tests/: .env.test  conftest.py  test_main.py
src/backend/tests/e2e/: test_graph_builder.py  test_health_check.py
src/backend/tests/unit/: test_graph_builder.py
(+94 files in other folders)
