[project]
name = "backend"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-arango",
    "pydantic",
    "pydantic-settings",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
    "pytest-asyncio",
]

[tool.uv.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"